--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,8 @@ html
         section.hero
             .container
                 .inner-hero.text-center
-                    h1.m-0.text-uppercase.stroked-title bandeja
+                    .dots-shape
+                    h1.m-0.text-uppercase bandeja
                         p.text-capitalize.m-0 community of challenge
         section.banner
             .container
