--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,7 +12,7 @@
 @import "partials/global";
 @import "partials/helper";
 @import "components/header";
-@import "pages/homePage";
+@import "pages/index";
 @import "pages/login";
 @import "pages/leaderboard";
 @import "pages/profile";
