--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,4 +16,5 @@
 @import "pages/login";
 @import "pages/leaderboard";
 @import "pages/profile";
+@import "pages/challenges";
 @import "components/footer";
