--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -57,7 +57,7 @@ html
                             a(href='login.html').btn.text-capitalize.bg-secondary.text-white.rounded-0 
                                 small register
 
-        section.text-section.mt-5(data-aos='fade' data-aos-duration="2000")
+        section.text-section.mt-5(data-aos='fade' data-aos-offset='0' data-aos-duration="2000")
             .container.p-4
                 .text-area
                     h2.text-title.text-uppercase.stroked-title.mb-4
