--- a/src/pug/profile.pug
+++ b/src/pug/profile.pug
@@ -41,8 +41,8 @@ html
                     .col-lg-4.col-md-6.mt-md-0.mt-5.order-md-0.order-first
                         .profile-card.py-5.px-3
                             .img-profile
-                                a(target='_blank' href='#')
-                                    img.img-fluid(src='img/player.jpg')
+                                a(target='_blank' href='edit-profile.html' title='Change Your Image')
+                                    img.img-fluid(src='img/player.jpg' alt='Change Your Image')
                             h3.player-name.text-center.text-capitalize.py-3
                                 | player name
                             .edit-profile
