--- a/src/pug/partials/head.pug
+++ b/src/pug/partials/head.pug
@@ -7,6 +7,7 @@ title #{PageTitle}
 link(rel='shortcut icon' href='img/favicon.png')
 link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css')
 link(rel='stylesheet' href='https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css')
+link(rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.12/css/select2.min.css')
 link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Dosis:400,600,700&display=swap")
 link(rel='stylesheet' href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap")
 link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css")
